--- a/angular-youtube/src/app/components/header/header.component.scss
+++ b/angular-youtube/src/app/components/header/header.component.scss
@@ -4,6 +4,9 @@
     justify-content: space-between;
     padding: 0 20px;
     position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: white;
     border-bottom: 1px solid #ccc;
 
     .header__left {
