AYL-9: create-channel-tabs (search input is working!)

--- a/angular-youtube/src/app/channel/channel-tabs/channel-tabs.component.scss
+++ b/angular-youtube/src/app/channel/channel-tabs/channel-tabs.component.scss
@@ -20,4 +20,11 @@
             visibility: hidden;
         }
     }
+
+    &__not-found {
+        text-align: center;
+        font-size: 24px;
+        color: #030303;
+        padding: 50px 0;
+    }
 }
