AYL-18: Add [ngClass] to Grid/List wrapper

--- a/angular-youtube/src/app/search/component/search.component.html
+++ b/angular-youtube/src/app/search/component/search.component.html
@@ -41,9 +41,10 @@
         </button>
     </section>
 
-    <section [ngClass]="{
-        'search-page__video-items_grid': videoListView,
-        'search-page__video-items_list': !videoListView
+    <section
+        [ngClass]="{
+            'search-page__video-items_grid': videoListView,
+            'search-page__video-items_list': !videoListView
         }"
     >
         <video-list-item
