AYL-17: created watch history, implemented video-list-item, made tests and fixed navigation

--- a/angular-youtube/src/app/video/comments/comments.component.html
+++ b/angular-youtube/src/app/video/comments/comments.component.html
@@ -73,7 +73,9 @@
                 >
                     <mat-icon>more_vert</mat-icon>
                 </button>
-                <mat-menu #menu="matMenu"> </mat-menu>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item>Report</button>
+                </mat-menu>
             </div>
         </div>
     </div>
