--- a/angular-youtube/src/app/components/header/header.component.html
+++ b/angular-youtube/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="header__left">
         <mat-icon class="header__sidebar-icon">menu</mat-icon>
         <img
-            routerLink="/search-page"
+            [routerLink]="['/search-page']"
             class="header__logo"
             src="/assets/logo.svg"
             alt="youtube logo"
@@ -35,4 +35,5 @@
             <mat-icon class="header__icon">search</mat-icon>
         </button>
     </form>
+    <p class="header__history-link" routerLink="/history">History</p>
 </div>
