--- a/angular-youtube/src/app/video/related-videos/related-videos.component.html
+++ b/angular-youtube/src/app/video/related-videos/related-videos.component.html
@@ -1,19 +1,8 @@
 <div class="related-videos-collection">
-    <a routerLink="/video-page">
-        <div
-            class="related-videos-item"
-            *ngFor="let relatedVideo of relatedVideos"
-        >
-            <iframe
-                class="iframe"
-                width="168"
-                height="90"
-                [src]="relatedVideo.id | sanitizeUrl"
-            >
-            </iframe>
-            <h2 class="related-video__title">
-                {{ relatedVideo.snippet.title }}
-            </h2>
-        </div>
-    </a>
+    <div class="related-videos-item" *ngFor="let relatedVideo of relatedVideos">
+        <a [routerLink]="['/video-page', relatedVideo.id]">
+            <video-list-item [isGrid]="false" [item]="relatedVideo">
+            </video-list-item>
+        </a>
+    </div>
 </div>
