--- a/angular-youtube/src/app/video/related-videos/related-videos.component.scss
+++ b/angular-youtube/src/app/video/related-videos/related-videos.component.scss
@@ -1,9 +1,7 @@
 .related-videos-item {
-    max-width: 300px;
-    display: flex;
-    flex-direction: row;
+    max-width: 400px;
     margin-bottom: 20px;
-    padding-right: 50px;
+    margin-left: 30px;
 
     .related-video__title {
         margin-left: 5px;
