--- a/angular-youtube/src/app/video/video.component.scss
+++ b/angular-youtube/src/app/video/video.component.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     max-width: 1300px;
+    width: 100%;
     margin: 20px auto;
 
     .current-video {
