AYL-16: created search history

--- a/angular-youtube/src/app/components/header/header.component.html
+++ b/angular-youtube/src/app/components/header/header.component.html
@@ -25,7 +25,13 @@
                 class="header__input"
                 type="search"
                 required
-            />
+                [matAutocomplete]="auto">
+            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                <mat-option *ngFor="let option of searchHistory" [value]="option">
+                    <span style="margin-right: 5px" class="material-icons">history</span>
+                    {{option}}
+                </mat-option>
+            </mat-autocomplete>
         </mat-form-field>
         <button
             class="header__search-button"
