AYL-53: create API key interseptor

--- a/angular-youtube/src/app/shared/video-list-item/video-list-item.component.html
+++ b/angular-youtube/src/app/shared/video-list-item/video-list-item.component.html
@@ -10,7 +10,9 @@
                 'video-item__link-image': !isGrid,
                 'video-grid-item__link-image': isGrid
             }"
-            src="{{ item.snippet.thumbnails.high.url }}" alt="video image"/>
+            src="{{ item.snippet.thumbnails.high.url }}" alt="video image"
+            [routerLink]="['/video-page', item.id]"
+            />
     </a>
     <a [ngClass]="{
             'video-item__info': !isGrid,
