AYL-53: fix styles

--- a/angular-youtube/src/app/components/header/header.component.html
+++ b/angular-youtube/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="header__left">
         <mat-icon class="header__sidebar-icon">menu</mat-icon>
         <img
-            routerLink="/search-page"
+            [routerLink]="['/search-page']"
             class="header__logo"
             src="/assets/logo.svg"
             alt="youtube logo"
