--- a/angular-youtube/src/app/shared/video-list-item/video-list-item.component.scss
+++ b/angular-youtube/src/app/shared/video-list-item/video-list-item.component.scss
@@ -3,6 +3,7 @@
     grid-template-rows: 100%;
     display: grid;
     column-gap: calc(2%);
+    height: inherit;
 
     &__link {
         cursor: pointer;
@@ -11,7 +12,6 @@
         justify-content: center;
 
         &-image {
-            width: 100%;
             justify-content: center;
         }
     }
