AYL-6: changed styling of element if the watched video appears again and changed relatedVideos request

--- a/angular-youtube/src/app/shared/video-list-item/video-list-item.component.html
+++ b/angular-youtube/src/app/shared/video-list-item/video-list-item.component.html
@@ -12,6 +12,7 @@
             }"
             src="{{ item.snippet.thumbnails.high.url }}" alt="video image"
             [routerLink]="['/video-page', item.id]">
+        <mat-progress-bar mode="determinate" value="40" color="warn" *ngIf="isWatched"></mat-progress-bar>
     </a>
     <a [ngClass]="{
             'video-item__info': !isGrid,
