--- a/angular-youtube/src/app/shared/video-list-item/video-list-item.component.scss
+++ b/angular-youtube/src/app/shared/video-list-item/video-list-item.component.scss
@@ -3,15 +3,16 @@
     grid-template-rows: 100%;
     display: grid;
     column-gap: calc(2%);
+    height: inherit;
 
     &__link {
         cursor: pointer;
         background: black;
         display: flex;
+        flex-direction: column;
         justify-content: center;
 
         &-image {
-            width: 100%;
             justify-content: center;
         }
     }
@@ -63,20 +64,18 @@
 
 .video-grid-item {
     display: grid;
-<<<<<<< HEAD
-    grid-template-rows: 165px auto;
-=======
     grid-template-rows: 220px auto;
->>>>>>> 61d32d4752868597ae27be099d533d675467b7dd
     grid-template-columns: 295px;
 
     &__link {
         position: relative;
         cursor: pointer;
         overflow: hidden;
+        display: flex;
+        flex-direction: column;
 
         &-image {
-            width: 100%;
+            height: 98%;
         }
 
         &-time {
