--- a/angular-youtube/src/app/channel/channel-playlists/channel-playlists.component.scss
+++ b/angular-youtube/src/app/channel/channel-playlists/channel-playlists.component.scss
@@ -61,6 +61,7 @@
                 width: 210px;
                 cursor: pointer;
                 padding: 0 8px;
+                text-decoration: none;
 
                 &-img {
                     height: 120px;
