--- a/angular-youtube/src/app/channel/channel.component.html
+++ b/angular-youtube/src/app/channel/channel.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="channel$ | async as channel" class="channel">
+<section *ngIf="channel" class="channel">
     <img src="{{ channel.brandingSettings.image.bannerExternalUrl + EXTENSION_FOR_CHANNEL_BANNER }}" class="channel__banner" alt="banner"/>
     <div class="channel__container">
         <div class="channel__header">
