--- a/angular-youtube/src/app/channel/channel-channels/channel-channels.component.scss
+++ b/angular-youtube/src/app/channel/channel-channels/channel-channels.component.scss
@@ -17,25 +17,33 @@
             padding: 0 8px;
             cursor: pointer;
 
-            &-img {
-                border-radius: 100%;
-                width: 103px;
-                height: 103px;
-            }
-
-            &-title {
-                text-align: center;
-                margin: 4px 0;
+            &__link {
+                text-decoration: none;
                 color: #030303;
-                font-weight: 700;
-                font-family: sans-serif;
-            }
+                display: flex;
+                flex-direction: column;
+                align-items: center;
 
-            &-subs {
-                text-align: center;
-                font-size: 12px;
-                color: #606060;
-                font-family: sans-serif;
+                &-img {
+                    border-radius: 100%;
+                    width: 103px;
+                    height: 103px;
+                }
+
+                &-title {
+                    text-align: center;
+                    margin: 4px 0;
+                    color: #030303;
+                    font-weight: 700;
+                    font-family: sans-serif;
+                }
+
+                &-subs {
+                    text-align: center;
+                    font-size: 12px;
+                    color: #606060;
+                    font-family: sans-serif;
+                }
             }
 
             &-btn {
